--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 body {
       font: 400 15px Tahoma, sans-serif;
       line-height: 1.8;
-      color: #818181;
-      background-color: #f6f6f6;
+      color: #000;
+      background-color: #fff;
   }
 h1 {
       background-color:#FF5733; 
