--- a/styles/my_first_style.css
+++ b/styles/my_first_style.css
@@ -1,8 +1,8 @@
 body {
       font: 400 15px Tahoma, sans-serif;
       line-height: 1.8;
-      color: #818181;
-      background-color: #f6f6f6;
+      color: #fff;
+      background-color: #000;
 	  display:grid; 
 	  grid-template-columns:1fr 3fr; 
 	  grid-template-areas:"header header" "aside content" "footer footer"; 
