--- a/styles/my_first_style.css
+++ b/styles/my_first_style.css
@@ -1,8 +1,8 @@
 body {
       font: 400 15px Tahoma, sans-serif;
       line-height: 1.8;
-      color: #fff;
-      background-color: #000;
+      color: #000;
+      background-color: #fff;
 	  display:grid; 
 	  grid-template-columns:1fr 3fr; 
 	  grid-template-areas:"header header" "aside content" "footer footer"; 
@@ -52,7 +52,7 @@ h5, h6 {
 }
 p {
 		
-		color: #708090;
+		color: #000;
 		text-align:justify;
 		text-justify:inter-word;
 }
@@ -98,3 +98,34 @@ footer address p {
 	color: #fff;
 	text-align:center;
 }
+a:link{
+	text-decoration: underline;
+	text-decoration-style: wavy;
+	text-decoration-color:#008080;
+}
+a:visited{
+	text-decoration: underline;
+	text-decoration-style: solid;
+	text-decoration-color: blue;
+}
+th {
+	font-weight:bold;
+	text-transform: uppercase;
+	color:#008080; 
+}
+table {
+  border-collapse: collapse;
+  margin:0 auto;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+ul{
+	list-style-type: square;
+	font-style:italic;
+}
+
+
+
+
