--- a/styles/my_first_style.css
+++ b/styles/my_first_style.css
@@ -6,6 +6,8 @@ body {
 	  display:grid; 
 	  grid-template-columns:1fr 3fr; 
 	  grid-template-areas:"header header" "aside content" "footer footer"; 
+	  grid-row-gap:20px;
+	  grid-column-gap:20px;
 }
 header{grid-area:header;}
 aside{grid-area:aside;}
