--- a/styles/my_first_style.css
+++ b/styles/my_first_style.css
@@ -5,7 +5,7 @@ body {
       background-color: #fff;
 	  display:grid; 
 	  grid-template-columns:1fr 3fr; 
-	  grid-template-areas:"header header" "aside content" "footer footer"; 
+	  grid-template-areas:"header header" "aside content content content" "footer footer"; 
 	  grid-row-gap:20px;
 	  grid-column-gap:20px;
 }
