--- a/styles/my_first_style.css
+++ b/styles/my_first_style.css
@@ -122,7 +122,7 @@ ul{
 	list-style-type: square;
 	font-style:italic;
 }
-html{ height:100%; width:100%;}
+body, html{ height:100%; width:100%;}
 
 
 
