--- a/styles/my_first_style.css
+++ b/styles/my_first_style.css
@@ -21,7 +21,7 @@ h1 {
 	  padding: 100px 25px;
 	  text-align: center;
 	  font-family: Arial,sans-serif;
-	  font-size: 300%;
+	  font-size:2em;
 	  letter-spacing: 4em;
 	  border-radius: 40px;
 }
